#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#
[project]
name = "romireftinty"
version = "0.1.0"
description = "A WPILib Romi Robot"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "wpilib>=2025.3.2.2",
    "robotpy-pykit==0.2.2",
    "robotpy-pykit-watch==0.2.0",
    "robotpy-halsim-gui>=2025.3.2.2",
    "robotpy>=2025.3.2.2",
    "robotpy-cli>=2024.0.0",
    "black>=25.9.8",
    "pylint>=4.0.2",
    "robotpy-pathplannerlib>=2025.2.7",
    #"phoenix6>=25.4.2",
    #"robotpy-navx>=2025.0.1.2",
    #"robotpy-rev>=2025.0.3.1",
    "robotpy-commands-v2>=2025.3.2",
    "robotpy-halsim-ws",
    "robotpy-native-romi>=2025.3.2",
    "robotpy-romi>=2025.3.2",
]
[tool.robotpy]

# Version of robotpy this project depends on
# to see what versions are available: https://pypi.org/pypi/robotpy/json

# Version of robotpy this project depends on
robotpy_version = "2025.3.2.2"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    #"apriltag",
    # "commands2",
    # "cscore",
    # "navx",
    # "pathplannerlib",
    # "phoenix5",
    # "phoenix6",
    # "photonvision",
    # "playingwithfusion",
    # "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install
requires = [
  "robotpy-pykit==0.2.1",
]

